<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_menu_current_weather"
            android:icon="@drawable/ic_current_weather_black_24dp"
            android:title="@string/nav_menu_current_weather"/>
        <item
            android:id="@+id/nav_menu_graphs"
            android:icon="@drawable/ic_graphs_black_32dp"
            android:title="@string/nav_menu_graphs"/>
        <item
            android:id="@+id/nav_menu_weather_forecast"
            android:icon="@drawable/ic_daily_forecast_dark_24dp"
            android:title="@string/nav_menu_daily_forecast"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/nav_menu_settings"/>
    </group>
    <group
        android:id="@+id/nav_menu_communication"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/nav_feedback"/>
        <item
            android:id="@+id/nav_menu_bitcoin_donation"
            android:icon="@drawable/ic_thumb_up_black_24dp"
            android:title="@string/nav_menu_bitcoin_donation"/>
    </group>
</menu>