<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="debug.to.file"
            android:summaryOff="Don't log to file"
            android:summaryOn="Log to file"
            android:title="Log to file" />
        <ListPreference
            android:defaultValue="24"
            android:entries="@array/log_file_lasting_entries"
            android:entryValues="@array/log_file_lasting_values"
            android:key="debug.file.lasting.hours"
            android:summary="@string/log_file_lasting_summary"
            android:title="@string/log_file_lasting_title"/>
        <Preference android:title="@string/debug_choose_file"
                    android:key="debug.log.file" />
</PreferenceScreen>