<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:behavior_peekHeight="100dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="8dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <TextView
            android:id="@+id/forecast.description"
            android:layout_width="336dp"
            android:layout_height="48dp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Sky is clear"/>

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/divider_light"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forecast.description"/>

        <LinearLayout
            android:id="@+id/forecast.temperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/forecast.night_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/temperature_night_title"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    tools:text="Night"/>

                <TextView
                    android:id="@+id/forecast.night_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    tools:text="451"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/forecast.morning_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/temperature_morning_title"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    tools:text="Morning"/>

                <TextView
                    android:id="@+id/forecast.morning_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    tools:text="451"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/forecast.day_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/temperature_day_title"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    tools:text="Day"/>

                <TextView
                    android:id="@+id/forecast.day_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    tools:text="451"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/forecast.evening_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/temperature_evening_title"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    tools:text="Evening"/>

                <TextView
                    android:id="@+id/forecast.evening_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    tools:text="451"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_wind"
            android:layout_width="336dp"
            android:layout_height="48dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forecast.temperature">

            <ImageView
                android:id="@+id/forecast.wind_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_wind_light_32dp"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/forecast.wind"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="16sp"
                tools:text="Wind: 3 m/s NW"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_rain"
            android:layout_width="336dp"
            android:layout_height="48dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_wind">

            <ImageView
                android:id="@+id/forecast.rain_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_rain_light_32dp"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/forecast.rain"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="16sp"
                tools:text="Rain 3mm"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_snow"
            android:layout_width="336dp"
            android:layout_height="48dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_rain">

            <ImageView
                android:id="@+id/forecast.snow_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_snow_light_32dp"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/forecast.snow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="16sp"
                tools:text="Snow: 666mm"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_humidity"
            android:layout_width="336dp"
            android:layout_height="48dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_snow">

            <ImageView
                android:id="@+id/forecast.humidity_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:cropToPadding="false"
                android:src="@drawable/ic_humidity_light_32dp"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/forecast.humidity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="16sp"
                tools:text="Humidity: 99%"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_pressure"
            android:layout_width="336dp"
            android:layout_height="48dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_humidity">

            <ImageView
                android:id="@+id/forecast.pressure_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_barometer_light_32dp"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/forecast.pressure"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:textSize="16sp"
                tools:text="Pressure: 1970 hPa"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>